<resources>
    <string name="app_name">JustJava</string>
    <string name="label_coffee">Coffee</string>
    <string name="label_house">House</string>
    <string name="your_name_hint">Your Name</string>
    <string name="quantity_label">Quantity</string>
    <string name="text_minus">-</string>
    <string name="text_plus">+</string>
    <string name="text_0">1</string>
    <string name="text_price">Order Summary</string>
    <string name="rupee">₹ </string>
    <string name="rupee_0">₹ 0</string>
    <string name="text_order">Order</string>
    <string name="bottom_tagline">We serve the best in town</string>
    <string name="thankyou_toast">Thank you %s Your order has been placed</string>
    <string name="error_toast">Please enter your name</string>
    <string name="price"> Name: %s \n %s \n %s \n Quantity: %d \n Total Price: ₹ %d \n Thank You!</string>
    <string name="whipped_cream_label">Whipped Cream</string>
    <string name="chocolate_label">Chocolate</string>
    <string name="toppings_label">Toppings</string>
    <string name="add_whipped_cream">Add whipped cream ?</string>
    <string name="add_chocolate_label">Add chocolate ?</string>
    <string name="toastlabel_entername">Please enter name</string>
    <string name="labelOrdersummary">Order Summary</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_cancel">Cancel</string>
    <string name="emailsubject_label">JustJava order for %s</string>
</resources>
