<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.akshaymanagooli.justjava.MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/coffee_bg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/AlphaBlack" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">





    <LinearLayout
        android:id="@+id/linearlayout_hero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_72dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/label_coffee"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_hero" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_house"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_hero"

            />

    </LinearLayout>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/editext_height"
        android:layout_below="@+id/linearlayout_hero"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/margin_32dp"
        android:layout_marginStart="@dimen/margin_32dp"
        android:layout_marginTop="@dimen/margin_40dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/your_name_hint"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <LinearLayout
        android:id="@+id/ll_toppings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toppings_label"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_16sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dimen_8dp"
            />

        <CheckBox
            android:id="@+id/cb_whippedcream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_16sp"
            android:text="@string/whipped_cream_label"
            android:textColor="@android:color/white"
            android:paddingStart="@dimen/dimen_24dp"
            android:buttonTint="@android:color/white" />
        <CheckBox
            android:id="@+id/cb_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_24dp"
            android:textSize="@dimen/textsize_16sp"
            android:text="@string/chocolate_label"
            android:textColor="@android:color/white"
            android:paddingStart="@dimen/dimen_24dp"
            android:buttonTint="@android:color/white" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_toppings"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:text="@string/quantity_label"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_16sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/tv_quantity">

            <Button
                android:id="@+id/bt_minus"
                android:layout_width="@dimen/dimen_24dp"
                android:layout_height="@dimen/dimen_24dp"
                android:background="@drawable/quantity_btn_bg"
                android:clickable="true"
                android:focusable="true"
                android:onClick="Onclick"
                android:text="@string/text_minus"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_16sp" />

            <TextView
                android:id="@+id/tv_quantity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:text="@string/text_0"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_16sp" />

            <Button
                android:id="@+id/bt_plus"
                android:layout_width="@dimen/dimen_24dp"
                android:layout_height="@dimen/dimen_24dp"
                android:background="@drawable/quantity_btn_bg"
                android:clickable="true"
                android:focusable="true"
                android:onClick="Onclick"
                android:text="@string/text_plus"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_16sp" />

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_quantity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:text="@string/text_price"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_16sp" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize_16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_order"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_price"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_32dp"
        android:background="@drawable/orderbtn_bg"
        android:clickable="true"
        android:focusable="true"
        android:onClick="Onclick"
        android:text="@string/text_order" />

    </RelativeLayout>
    </ScrollView>
</RelativeLayout>
